<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.DetailFragment">


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2"
        app:useDefaultMargins="true">

        <TextView
            android:id="@+id/labelNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            app:layout_column="0"
            app:layout_gravity="end|center_horizontal"
            app:layout_row="0" />

        <TextView
            android:id="@+id/labelPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            app:layout_column="0"
            app:layout_gravity="end|center_horizontal"
            app:layout_row="1" />

        <TextView
            android:id="@+id/labelEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_column="0"
            app:layout_gravity="end|center_horizontal"
            app:layout_row="2" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

</FrameLayout>